// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`View Filter Group update should fail when parentViewFilterGroupId does not exist 1`] = `
{
  "extensions": {
    "code": "NOT_FOUND",
    "subCode": "RELATION_UNIVERSAL_IDENTIFIER_NOT_FOUND",
    "userFriendlyMessage": "An error occurred.",
  },
  "message": "Could not find viewFilterGroup for given parentViewFilterGroupId",
  "name": "NotFoundError",
}
`;

exports[`View Filter Group update should fail when view filter group id does not exist 1`] = `
{
  "extensions": {
    "code": "NOT_FOUND",
    "subCode": "VIEW_FILTER_GROUP_NOT_FOUND",
    "userFriendlyMessage": "A view filter group error occurred.",
  },
  "message": "View filter group not found",
  "name": "NotFoundError",
}
`;
